--- a/src/web/admins/templates/admins/event_list.html
+++ b/src/web/admins/templates/admins/event_list.html
@@ -3,15 +3,7 @@
 {% load core_tags %}
 
 {% block subtitle %}
-    Events List
-{% endblock %}
-
-{% block page_heading %}
-    <div class="text-right">
-        <a class="btn btn-primary" href="{% url 'admins:event-add' %}">
-            ADD NEW
-        </a>
-    </div>
+    Events
 {% endblock %}
 
 {% block content %}
@@ -23,8 +15,11 @@
                     {{ filter_form }}
                     <div class="input-group-append">
                         <button class="btn btn-primary" type="submit">
-                            <i class="fa fa-search"></i> Search
+                            <i class="fa fa-search"></i>
                         </button>
+                        <a class="btn btn-danger" href="{% url 'admins:event-list' %}">
+                            <i class="fa fa-paint-brush"></i>
+                        </a>
                     </div>
                 </div>
             </form>
@@ -34,83 +29,92 @@
     <div class="row">
         <div class="col-md-12">
             <div class="card">
-                <div class="table-responsive">
-                    <table class="table table-borderless table-hover">
-                        {% if object_list %}
-                            <thead class="border-bottom">
-                            <tr>
-                                <th>Name</th>
-                                <th>Type</th>
-                                <th>Participants</th>
-                                <th>Status</th>
-                                <th>Date</th>
-                                <th>-</th>
-                            </tr>
-                            </thead>
-
-                            <tbody>
-
-                            {% for object in object_list %}
+                <div class="card-body">
+                    {% if object_list %}
+                        <div class="table-responsive">
+                            <table class="table table-borderless table-hover">
+                                <thead class="border-bottom">
                                 <tr>
-                                    <td>{{ object.name }}</td>
-                                    <td>
-                                        <h3 class="text-danger"><i class="fa fa-hat-cowboy"></i></h3>
-                                    </td>
-                                    <td><h3>{{ object.participant_set.count }}</h3></td>
-                                    <td><h3>{{ object.get_status_display }}</h3></td>
-                                    <td>
-                                        <b>Spurned: </b>{{ object.spun_on }}<br>
-                                        <b>Created: </b>{{ object.created_on }}
-                                    </td>
-                                    <td>
-                                        <b>
-                                            <a href="{% url 'admins:event-detail' object.id %}">
-                                                <i class="fa fa-eye"></i> view
-                                            </a>
-                                        </b>
-                                    </td>
+                                    <th><i class="mdi mdi-tent"></i> Name</th>
+                                    <th><i class="mdi mdi-library"></i> Type</th>
+                                    <th><i class="mdi mdi-nature-people"></i> Participants</th>
+                                    <th><i class="mdi mdi-check"></i> Status</th>
+                                    <th><i class="bx bx-bell bx-tada"></i> Spurned On</th>
+                                    <th>-</th>
                                 </tr>
-                            {% endfor %}
+                                </thead>
 
-                            </tbody>
-                        {% else %}
-                            <th class="text-danger">No users data available.</th>
-                        {% endif %}
-                    </table>
+                                <tbody>
+
+                                {% for object in object_list %}
+                                    <tr>
+                                        <td>
+                                            <b>{{ object.name }}</b><br>
+                                            {{ object.created_on.date }}
+                                        </td>
+                                        <td>
+                                            <b class="text-danger">{{ object.get_event_type_display }}</b>
+                                        </td>
+                                        <td><h5>{{ object.participant_set.count }}</h5></td>
+                                        <td><h5>{{ object.get_status_display }}</h5></td>
+                                        <td>
+                                            {{ object.spun_on.date }}<br>
+                                            {{ object.spun_on.time }}
+                                        </td>
+                                        <td>
+                                            <b>
+                                                <a href="{% url 'admins:event-detail' object.id %}">
+                                                    <i class="fa fa-eye"></i> view
+                                                </a>
+                                            </b>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+
+                                </tbody>
+                            </table>
+                        </div>
+                    {% else %}
+                        <p class="text-danger mb-0">
+                            <b>No events available yet.</b>
+                        </p>
+                    {% endif %}
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-12">
-            <div class="mt-4">
-                <ul class="pagination">
-                    {% if page_obj.has_previous %}
-                        <li>
+    {% if object_list %}
+        <div class="row">
+            <div class="col-md-12">
+                <div class="mt-4">
+                    <ul class="pagination">
+                        {% if page_obj.has_previous %}
+                            <li>
                             <span>
                                 <a href="{% relative_url page_obj.previous_page_number 'page' request.GET.urlencode %}">
                                     Previous
                                 </a>
                             </span>
+                            </li>
+                        {% endif %}
+                        <li class="">
+                            <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.</span>
                         </li>
-                    {% endif %}
-                    <li class="">
-                        <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.</span>
-                    </li>
-                    {% if page_obj.has_next %}
-                        <li>
+                        {% if page_obj.has_next %}
+                            <li>
                             <span>
                                 <a href="{% relative_url page_obj.next_page_number 'page' request.GET.urlencode %}">
                                     Next
                                 </a>
                             </span>
-                        </li>
-                    {% endif %}
-                </ul>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
+    {% endif %}
 
 {% endblock %}
 
@@ -121,6 +125,8 @@
             $('label').hide();
             $('input').addClass('form-control');
             $('select').addClass('form-control');
+            $("#id_event_type option:first-child").text("-- event type --");
+            $("#id_status option:first-child").text("-- status --");
 
         });
     </script>
