--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -38,7 +38,7 @@
                                 <a href="">
                                     <div class="avatar-md profile-user-wid mb-4">
                                             <span class="avatar-title rounded-circle bg-light">
-                                                <img src="{% static 'core/images/logos/logo-red.png' %}" alt=""
+                                                <img src="{% static 'core/images/logos/logo.png' %}" alt=""
                                                      class="rounded-circle"
                                                      height="45">
                                             </span>
@@ -120,8 +120,9 @@
                                 {% endif %}
 
                                 <div class="mt-4 text-center">
-                                    <a href="{% url 'account_reset_password' %}" class="text-muted"><i
-                                            class="mdi mdi-lock mr-1"></i> Forgot your password?</a>
+                                    <a href="{% url 'account_reset_password' %}" class="text-muted">
+                                        <i class="mdi mdi-lock mr-1"></i> Forgot your password?
+                                    </a>
                                 </div>
                             </div>
 
