--- a/src/web/admins/templates/admins/event_delete_confirm.html
+++ b/src/web/admins/templates/admins/event_delete_confirm.html
@@ -19,8 +19,8 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-12">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
             <div class="card border border-danger">
                 <div class="card-body">
 
@@ -30,6 +30,7 @@
                     </p>
 
                     <form method="post">
+                        {% csrf_token %}
                         <button type="submit" class="btn btn-danger">
                             <i class="fa fa-trash"></i> Delete Permanently
                         </button>
