--- a/src/web/admins/templates/admins/include/admin_nav.html
+++ b/src/web/admins/templates/admins/include/admin_nav.html
@@ -9,19 +9,19 @@
             <div class="navbar-brand-box">
                 <a href="#" class="logo logo-dark">
                                 <span class="logo-sm">
-                                    <img src="{% if app.logo %}{{ app.logo.url }}{% else %}{% static 'core/images/logos/logo-red.png' %}{% endif %}" alt="" height="35">
+                                    <img src="{% if app.logo %}{{ app.logo.url }}{% else %}{% static 'core/images/logos/logo.png' %}{% endif %}" alt="" height="35">
                                 </span>
                     <span class="logo-lg">
-                                    <img src="{% if app.logo %}{{ app.logo.url }}{% else %}{% static 'core/images/logos/logo-red.png' %}{% endif %}" alt="" height="35">
+                                    <img src="{% if app.logo %}{{ app.logo.url }}{% else %}{% static 'core/images/logos/logo.png' %}{% endif %}" alt="" height="35">
                                 </span>
                 </a>
 
                 <a href="#" class="logo logo-light">
                                 <span class="logo-sm">
-                                    <img src="{% if app.logo %}{{ app.logo.url }}{% else %}{% static 'core/images/logos/logo-red.png' %}{% endif %}" alt="" height="35">
+                                    <img src="{% if app.logo %}{{ app.logo.url }}{% else %}{% static 'core/images/logos/logo.png' %}{% endif %}" alt="" height="35">
                                 </span>
                     <span class="logo-lg">
-                                    <img src="{% if app.logo %}{{ app.logo.url }}{% else %}{% static 'core/images/logos/logo-red.png' %}{% endif %}" alt="" height="35">
+                                    <img src="{% if app.logo %}{{ app.logo.url }}{% else %}{% static 'core/images/logos/logo.png' %}{% endif %}" alt="" height="35">
                                 </span>
                 </a>
             </div>
@@ -93,10 +93,10 @@
                             {% if request.user.profile_image %}
                          src="{{ request.user.profile_image.url }}"
                             {% else %}
-                         src="{% static 'core/images/base/no-user.png' %}"
+                         src="https://placehold.co/100"
                             {% endif %}
                          alt="Header Avatar">
-                    <span class="d-none d-xl-inline-block ml-1">{{ request.user.username }}</span>
+                    <span class="d-none d-xl-inline-block ml-1">{{ request.user }}</span>
                     <i class="mdi mdi-chevron-down d-none d-xl-inline-block"></i>
                 </button>
                 <div class="dropdown-menu dropdown-menu-right">
