--- a/src/web/admins/templates/admins/event_list.html
+++ b/src/web/admins/templates/admins/event_list.html
@@ -6,6 +6,18 @@
     Events
 {% endblock %}
 
+{% block page_heading %}
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="text-right">
+                <a href="/admin/lucky_draw/event/add/" class="btn btn-primary">
+                    <i class="fa fa-plus"></i> Add Event
+                </a>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
 
     <div class="row">
