--- a/src/web/admins/templates/admins/include/admin_header.html
+++ b/src/web/admins/templates/admins/include/admin_header.html
@@ -25,16 +25,17 @@
                     </li>
 
                     {# EVENTS #}
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle arrow-none" href="#" id="topnav-pages" role="button"
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="bx bx-user mr-2"></i>Events
-                            <div class="arrow-down"></div>
+
+                    <li class="nav-item">
+                        <a class="nav-link dropdown-toggle arrow-none" href="{% url 'admins:event-list' %}">
+                            <i class="fa fa-coins mr-2"></i>Events
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="topnav-pages">
-                            <a href="{% url 'admins:event-list' %}" class="dropdown-item">Events</a>
-                            <a href="{% url 'admins:event-add' %}" class="dropdown-item">Add New</a>
-                        </div>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link dropdown-toggle arrow-none" href="{% url 'admins:event-list' %}">
+                            <i class="fa fa-coins mr-2"></i>Events
+                        </a>
                     </li>
 
                     <li class="nav-item">
