--- a/src/web/admins/templates/admins/include/admin_nav.html
+++ b/src/web/admins/templates/admins/include/admin_nav.html
@@ -9,19 +9,19 @@
             <div class="navbar-brand-box">
                 <a href="#" class="logo logo-dark">
                                 <span class="logo-sm">
-                                    <img src="{% if app.logo %}{{ app.logo.url }}{% else %}{% static 'core/images/logos/logo.png' %}{% endif %}" alt="" height="35">
+                                    <img class="fa fa-spin" src="{% if app.logo %}{{ app.logo.url }}{% else %}{% static 'core/images/logos/logo.png' %}{% endif %}" alt="" height="35">
                                 </span>
                     <span class="logo-lg">
-                                    <img src="{% if app.logo %}{{ app.logo.url }}{% else %}{% static 'core/images/logos/logo.png' %}{% endif %}" alt="" height="35">
+                                    <img class="fa fa-spin" src="{% if app.logo %}{{ app.logo.url }}{% else %}{% static 'core/images/logos/logo.png' %}{% endif %}" alt="" height="35">
                                 </span>
                 </a>
 
                 <a href="#" class="logo logo-light">
                                 <span class="logo-sm">
-                                    <img src="{% if app.logo %}{{ app.logo.url }}{% else %}{% static 'core/images/logos/logo.png' %}{% endif %}" alt="" height="35">
+                                    <img class="fa fa-spin" src="{% if app.logo %}{{ app.logo.url }}{% else %}{% static 'core/images/logos/logo.png' %}{% endif %}" alt="" height="35">
                                 </span>
                     <span class="logo-lg">
-                                    <img src="{% if app.logo %}{{ app.logo.url }}{% else %}{% static 'core/images/logos/logo.png' %}{% endif %}" alt="" height="35">
+                                    <img class="fa fa-spin" src="{% if app.logo %}{{ app.logo.url }}{% else %}{% static 'core/images/logos/logo.png' %}{% endif %}" alt="" height="35">
                                 </span>
                 </a>
             </div>
