--- a/src/web/admins/templates/admins/lucky_draw.html
+++ b/src/web/admins/templates/admins/lucky_draw.html
@@ -26,13 +26,25 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8 col-lg-6 col-xl-5">
-                    <div class="row justify-content-center">
+
+                    <div class="row justify-content-center mt-5">
+                        <div class="cols">
+                            <a href="{% url 'admins:event-detail' object.id %}">
+                                <b>
+                                    <i class="bx bx-arrow-back"></i> back to {{ object.name }}
+                                </b>
+                            </a>
+                        </div>
+                    </div>
+
+
+                    <div class="row justify-content-center mt-4">
                         <div class="cols text-center">
-                            <img src="{% static 'core/images/logos/logo.png' %}" height="100" class="mb-3">
+                            <img src="{% static 'core/images/logos/logo.png' %}" height="100" class="mb-3 fa fa-spin">
                             <p class="mb-0">EVENT #{{ object.id }}</p>
                             <p class="h1 text-success mb-5">WinnieSpin</p>
                             <p class="h1 mb-0 text-secondary text-shadow1"
-                               style="padding: 10px; text-shadow: grey; font-size: 90px; border: 10px solid darkgreen; border-radius: 10px;"
+                               style="padding: 10px; text-shadow: grey; font-size: 60px; border: 10px solid lightgrey; border-radius: 10px;"
                                id="spin-data">
                                 |||||||||||||||||||||||
                             </p>
