--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -39,7 +39,7 @@
                                     <div class="avatar-md profile-user-wid mb-4">
                                             <span class="avatar-title rounded-circle bg-light">
                                                 <img src="{% static 'core/images/logos/logo.png' %}" alt=""
-                                                     class="rounded-circle"
+                                                     class="rounded-circle fa fa-spin"
                                                      height="45">
                                             </span>
                                     </div>
